Adds banner image, creates flexboxes for individual sections on page.

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,11 +17,27 @@ header {
   color: #fff;
 }
 
+/* Creates vertical line */
+
+.vl {
+  border-left: 6px solid black;
+  height: auto;
+  left: 50%;
+  padding: 20px;
+  margin-left: -3px;
+  top: 0;
+}
+
 .title {
   width: 300px;
   border: 15px solid green;
   padding: 50px;
   margin: 20px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 h1 {
@@ -30,6 +46,19 @@ h1 {
   border: 15px solid purple;
   padding: 20px;
   margin: 20px;
+}
+
+h2 {
+  padding: 20px;
+}
+
+p{{
+  padding: 20px;
+}}
+
+.section {
+  display: flex;
+  justify-content: flex-start;
 }
 
 nav ul {
