--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,10 @@ img {
   height: auto;
 }
 
+pics {
+  background-color: green;
+}
+
 h1 {
   font-size: 400%;
   width: 300px;
@@ -56,7 +60,7 @@ p{{
   padding: 20px;
 }}
 
-.section {
+.sec {
   display: flex;
   justify-content: flex-start;
 }
@@ -78,4 +82,14 @@ nav a {
 
 body {
   background-color: grey;
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+}
+
+.worksec {
+  justify-content: space-between;
 }
