--- a/assets/style.css
+++ b/assets/style.css
@@ -113,3 +113,12 @@ body {
   bottom: 8px;
   left: 16px;
 }
+
+.contactlist {
+  display: flex;
+  justify-content: center;
+  min-width: 400px;
+  list-style-type: none;
+  font-size: 120%;
+  text-decoration: underline;
+}
